[gd_scene load_steps=11 format=2]

[ext_resource path="res://Music/SFX/menu_button_hover.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Art/mockup.png" type="Texture" id=4]
[ext_resource path="res://Shaders/grayscale.tres" type="Shader" id=5]
[ext_resource path="res://Music/rainbow_title.wav" type="AudioStream" id=6]
[ext_resource path="res://Art/exitButton.png" type="Texture" id=7]
[ext_resource path="res://Art/playButton.png" type="Texture" id=8]
[ext_resource path="res://Art/title.png" type="Texture" id=9]
[ext_resource path="res://Music/SFX/thunder.wav" type="AudioStream" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/ColorLevel = null

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 238.11, 134.929 )
texture = ExtResource( 4 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 332.979
margin_top = 201.45
margin_right = 446.979
margin_bottom = 259.45
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 39.8651
margin_top = 207.514
margin_right = 153.865
margin_bottom = 265.514
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="title" type="Sprite" parent="."]
position = Vector2( 180.167, 69.1381 )
texture = ExtResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="ThunderSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="MusicDelayTimer" type="Timer" parent="."]
wait_time = 1.9
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitBtn_pressed"]
[connection signal="timeout" from="MusicDelayTimer" to="." method="_on_MusicDelayTimer_timeout"]
